I think this should fix it on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,6 +28,8 @@ body {
   place-items: center;
   width: 100vw;
   height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
   overflow: hidden;
   position: relative;
 }
